Fixed spacing between header and features section

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 		height: 2000px;
 		width: 100%;
 		margin: 0px;
+		
 	}
 	
 	.navbuttons {
@@ -74,6 +75,7 @@
 		width: 100%;
 		z-index= 2;
 		background-color: whitesmoke;
+		
 	}
 	
 	#landingvideo {
@@ -128,8 +130,9 @@
 		width: 100%;
 		height: 400vh;
 		background-color: whitesmoke;
-		mix-blend-mode: multiply;
+		mix-blend-mode: darken;
 		z-index: 3;
+		padding-top: 10%;
 		
 		display: grid;
 		grid-template-columns: 1fr 2.5fr 2.5fr 1fr;
